# aegis

./: .env.example  .gitignore  AGENTS.md  AGENT_TOOL_CALL_RELIABILITY_UPDATES.md  CALL_SUMMARY_ETL_MIGRATION.md  CLAUDE.md  CM_READTHROUGH_ALIGNMENT_ANALYSIS.md  CM_READTHROUGH_ALIGNMENT_COMPLETED.md  CM_READTHROUGH_ETL_MIGRATION.md  CODE_REVIEW_PROMPT_MIGRATION.md  ETL_ALIGNMENT_IMPLEMENTATION_PLAN.md  ETL_COMPREHENSIVE_COMPARISON.md  ETL_FUNCTIONAL_DIFFERENCES_AUDIT.md  ETL_REFACTORING_GUIDE.md  ETL_STANDARDIZATION_COMPLETE.md  HARDCODED_VALUES_REVIEW.md  HOTFIX_Q3_TRANSCRIPTS_HANG.md  KEY_THEMES_ETL_MIGRATION.md  MIGRATION_SUMMARY.md  MIGRATION_TRACKER.md  PROMPT_EXAMPLES.md  PROMPT_EXAMPLES_REAL.md  README.md  SUPPLEMENTARY_SUBAGENT_FIX.md  TEST_COVERAGE_TRACKER.md  aegis_try_a_prompt_questions.xlsx  check_themes.py  check_transcript_tables.py  conftest.py  insert_test_transcript_data.py  install.sh  manual_test_api.py  pyproject.toml  requirements-prod.txt  requirements.txt  run_fastapi.py  run_web.py  run_workflow.py  setup.py  test_aegis_reports_flow.py  (+13 more)
data/: aegis_data_availability_data.sql  aegis_data_availability_schema.sql  aegis_tables_schema.sql  aegis_transcripts_schema.sql  aegis_transcripts_schema_simple.sql  process_monitor_logs_data.sql  process_monitor_logs_schema.sql
docs/: AEGIS_PROJECT_OVERVIEW.md  CODE_REVIEW_FINDINGS.md  PYLINT_EXPLANATIONS.md  README.md  aegis-process-flow.html  prompt_template.md
documentation/: etl_category_config_migration.md
interfaces/: database.py  monitoring.py  web.py
performance_testing/: performance_tester.py  (+1 more)
(+609 files in other folders)
