[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.1.0"
description = "An orchestrated agent-based workflow system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[project.optional-dependencies]
dev = [
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: mark test as integration test that makes real API calls"
]